--- a/examples/utilities/backends/nginx-protected/kustomization.yaml
+++ b/examples/utilities/backends/nginx-protected/kustomization.yaml
@@ -1,6 +1,5 @@
 resources:
   - ../nginx
 
-patches:
-  - path: deployment_airlock_injection_patch.yaml
-  - path: deployment_airlock_network_annotation_patch.yaml
+components:
+  - ../../../components/mgw-injection
