--- a/examples/utilities/backends/nginx/nginx.conf
+++ b/examples/utilities/backends/nginx/nginx.conf
@@ -54,11 +54,11 @@ http {
     access_log /dev/stdout main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    # Disable body size limit
+    client_max_body_size 0;
 
     include /etc/nginx/conf.d/*.conf;
 }
