--- a/deploy/charts/airlock-microgateway-cni/values.yaml
+++ b/deploy/charts/airlock-microgateway-cni/values.yaml
@@ -15,10 +15,10 @@ image:
   # -- Image repository from which to pull the Airlock Microgateway CNI image.
   repository: "quay.io/airlock/microgateway-cni"
   # -- Image tag to pull.
-  tag: "4.2.4"
+  tag: "4.3.0"
   # -- SHA256 image digest to pull (in the format "sha256:7144f7bab3d4c2648d7e59409f15ec52a18006a128c733fcff20d3a4a54ba44a").
   # Overrides tag when specified.
-  digest: "sha256:0fa0cd126229de0129e715b4a2f39b3a63d87e71fc48d788155ba1e5a7277017"
+  digest: "sha256:cb165e34a1ab1a903a9f38b741a7d78946470a118640310a41d2af8153d6e409"
   # -- Pull policy for this image.
   pullPolicy: IfNotPresent
 # -- Annotations to add to all Pods.
@@ -69,8 +69,12 @@ config:
   # -- Log level for the CNI installer and plugin.
   logLevel: info
   # -- Directory where the CNI config files reside on the host.
+  # This path can either be found in the documentation of your Kubernetes distribution or CNI provider.
+  # It can also be queried by running the command `crictl info -o go-template --template '{{.config.cni.confDir}}'` on your Kubernetes node.
   cniNetDir: "/etc/cni/net.d"
   # -- Directory where the CNI plugin binaries reside on the host.
+  # This path can either be found in the documentation of your Kubernetes distribution or CNI provider.
+  # It can also be queried by running the command `crictl info -o go-template --template '{{.config.cni.binDir}}'` on your Kubernetes node.
   cniBinDir: "/opt/cni/bin"
   # -- Namespaces for which this CNI plugin should not apply any modifications.
   excludeNamespaces:
