--- a/deploy/charts/airlock-microgateway/crds/contentsecurities.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/contentsecurities.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.2.4
+    app.kubernetes.io/version: 4.3.0
   name: contentsecurities.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -52,6 +52,18 @@ spec:
                     APIProtection defines the relevant configurations to protect APIs.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
                   properties:
+                    graphQLRef:
+                      description: |-
+                        GraphQLRef selects the relevant GraphQL configuration resource.
+                        If undefined, default settings are applied, designed to work with most upstream web application services.
+                      properties:
+                        name:
+                          description: Name of the resource
+                          minLength: 1
+                          type: string
+                      required:
+                        - name
+                      type: object
                     openAPIRef:
                       description: |-
                         OpenAPIRef selects the relevant OpenAPI configuration resource.
