--- a/deploy/charts/airlock-microgateway/crds/telemetries.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/telemetries.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.2.4
+    app.kubernetes.io/version: 4.3.0
   name: telemetries.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -46,6 +46,21 @@ spec:
                 correlation:
                   description: Correlation defines the correlation aspects of Telemetry.
                   properties:
+                    idSource:
+                      description: IDSource specifies how an external correlation ID should be obtained for a request. If not specified, no correlation ID will be logged.
+                      properties:
+                        header:
+                          description: Header specifies to extract the correlation ID from a request header. If the header is absent from a request, no correlation ID will be logged.
+                          properties:
+                            name:
+                              default: X-Correlation-Id
+                              description: Name of the header (case-insensitive) from which to extract the correlation ID.
+                              minLength: 1
+                              type: string
+                          type: object
+                      required:
+                        - header
+                      type: object
                     request:
                       description: Request defines the request related correlation settings of Telemetry.
                       properties:
