--- a/deploy/charts/airlock-microgateway/templates/operator/podmonitor.yaml
+++ b/deploy/charts/airlock-microgateway/templates/operator/podmonitor.yaml
@@ -19,6 +19,7 @@ spec:
   selector:
     matchLabels:
       sidecar.microgateway.airlock.com/inject: "true"
+      microgateway.airlock.com/managedBy: {{ .Release.Namespace }}
   podMetricsEndpoints:
     - targetPort: 19002
       path: /metrics
