--- a/deploy/charts/airlock-microgateway/tests/operator/manager_clusterrole_test.yaml
+++ b/deploy/charts/airlock-microgateway/tests/operator/manager_clusterrole_test.yaml
@@ -1,6 +1,6 @@
-suite: helm.operator.TestClusterRole
+suite: helm.operator.TestManagerClusterRole
 templates:
-  - operator/manager-clusterrole.yaml
+  - operator/manager-role.yaml
 tests:
   - it: should create cluster role by default and set name
     release:
@@ -11,9 +11,9 @@ tests:
           count: 1
       - isKind:
           of: ClusterRole
-      - matchRegex:
+      - equal:
           path: metadata.name
-          pattern: ^myoperator-microgateway-.*-mytestnamespace$
+          value: myoperator-microgateway-operator-manager-mytestnamespace
 
   - it: should not set namespace on cluster-wide resource
     release:
@@ -31,9 +31,9 @@ tests:
       name: myoperator
       namespace: mytestnamespace
     asserts:
-      - matchRegex:
+      - equal:
           path: metadata.name
-          pattern: ^operatorfullname-operator-.*-mytestnamespace$
+          value: operatorfullname-operator-manager-mytestnamespace
 
   - it: should not create cluster role if creation is disabled
     set:
