--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -26,10 +26,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.2.4"
+    tag: "4.3.0"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:47ff2f02e676502e421f76eb1c3fadb1609e785877958b1a03aa9949f59df1ab"
+    digest: "sha256:dc6f0f9a11d0336c10f6b8a5c7f64d98ac91bd90c49aa1dc4fe7b68cfdea8217"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -72,7 +72,27 @@ operator:
     # -- Name of the ServiceAccount to use.
     # If not set and create is true, a name is generated using the fullname template.
     name: ""
-  # Configures the generation of Role and RoleBinding as well ClusterRoles and ClusterRoleBinding pairs for the ServiceAccount specified above.
+  # -- Allows to restrict the operator to specific namespaces, depending on your needs.
+  # For a `OwnNamespace` or `SingleNamespace` installation the list may only contain one namespace (e.g., `watchNamespaces: ["airlock-microgateway-system"]`).
+  # In case of the `OwnNamespace` installation mode the specified namespace should be equal to the installation namespace.
+  # For a static `MultiNamespace` installation, the complete list of namespaces must be provided in the `watchNamespaces`.
+  # An `AllNamespaces` installation or the usage of the `watchNamespaceSelector` requires the `watchNamespaces` to be empty.
+  # Regardless of the installation modes supported by `watchNamespaces`, RBAC is created only namespace-scoped (using Roles and RoleBindings) in the respective namespaces.
+  # Please note that this feature requires a Premium license.
+  watchNamespaces: []
+  # -- Allows to dynamically select watch namespaces of the operator and the scope of the webhooks based on a Namespace label selector.
+  # It is able to detect and reconcile resources in all namespaces that match the label selector automatically, even for new namespaces, without restarting the operator.
+  # This facilitates a dynamic `MultiNamespace` installation mode, but still requires cluster-scoped permissions (i.e., ClusterRoles and ClusterRoleBindings).
+  # An `AllNamespaces` installation or the usage of the `watchNamespaces` requires the `watchNamespaceSelector` to be empty.
+  # Please note that this feature requires a Premium license.
+  watchNamespaceSelector: {}
+  # For further examples, see: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#resources-that-support-set-based-requirements.
+  #  matchLabels:
+  #    microgateway.airlock.com/enable: "true"
+  #  matchExpressions:
+  #    - { key: environment, operator: NotIn, values: [dev] }
+
+  # Configures the generation of Role and RoleBinding as well as ClusterRoles and ClusterRoleBinding pairs for the ServiceAccount specified above.
   rbac:
     # -- Whether to create RBAC resources which are required for the Airlock Microgateway Operator to function.
     create: true
@@ -89,10 +109,10 @@ engine:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.2.4"
+    tag: "4.3.0"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:170ef4811f3a33a81825a9c37ed89bb2768dd2c751bf2ee205bcfcb2910663e9"
+    digest: "sha256:f442143294f3138965c9fa2734cafd39ebebe8e289600332b12f8a59c23dd9ef"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Engine container.
@@ -126,9 +146,65 @@ networkValidator:
     digest: "sha256:7d87405b123c89058a0b64ca9393c45a1366a6a580aced1def900a812beb29f6"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
+sessionAgent:
+  # Specifies the Airlock Microgateway Session Agent image.
+  image:
+    # -- Image repository from which to pull the Airlock Microgateway Session Agent image.
+    repository: "quay.io/airlock/microgateway-session-agent"
+    # -- Image tag to pull.
+    tag: "4.3.0"
+    # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
+    # Overrides tag when specified.
+    digest: "sha256:579dfded99145f9c2c1491ff1aeccb08721d63239a8b7f61bb9f455e17e968b2"
+    # -- Pull policy for this image.
+    pullPolicy: IfNotPresent
+  # -- Resource restrictions to apply to the Airlock Microgateway Session Agent container.
+  resources: {}
+  # We recommend at least the following resource specification.
+  #  limits:
+  #    cpu: 150m
+  #    memory: 32Mi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 8Mi
 license:
   # -- Name of the secret containing the "microgateway-license.txt" key.
   secretName: "airlock-microgateway-license"
+# Creates dashboards in the form of ConfigMaps that can be imported
+# by Grafana using its sidecar setup.
+dashboards:
+  # -- Whether to create any ConfigMaps containing Grafana dashboards to import.
+  create: false
+  config:
+    # Configures the necessary label and annotations along with their values
+    # to enable Grafana to correctly identify the ConfigMaps containing
+    # dashboards and file them within a dedicated folder in the dashboard overview.
+    # These settings need to match the Grafana sidecar configuration.
+    grafana:
+      folderAnnotation:
+        # -- Name of the annotation containing the folder name to file dashboards into.
+        name: "grafana_folder"
+        # -- Name of the folder dashboards are filed into within the Grafana UI.
+        value: "Airlock Microgateway"
+      dashboardLabel:
+        # -- Name of the label that lets Grafana identify ConfigMaps that represent dashboards.
+        name: "grafana_dashboard"
+        # -- Value of the label that lets Grafana identify ConfigMaps that represent dashboards.
+        value: "1"
+  instances:
+    # Available dashboard instances that can be individually created/deployed.
+    overview:
+      # -- Whether to create the overview dashboard.
+      create: true
+    license:
+      # -- Whether to create the license dashboard.
+      create: true
+    blockMetrics:
+      # -- Whether to create the block metrics dashboard.
+      create: true
+    blockLogs:
+      # -- Whether to create the block logs dashboard.
+      create: true
 # Check whether the installation of the Airlock Microgateway Helm Chart was successful.
 # Requires a secret with a valid Airlock Microgateway license key already to be present.
 tests:
