--- a/examples/utilities/backends/nginx/kustomization.yaml
+++ b/examples/utilities/backends/nginx/kustomization.yaml
@@ -6,6 +6,12 @@ configMapGenerator:
 - name: nginx-config
   files:
   - nginx.conf
+- name: nginx-default-config
+  files:
+  - default.conf
+- name: nginx-server-config
+  files:
+    - common.conf
 
 generatorOptions:
   disableNameSuffixHash: true
