--- a/deploy/charts/airlock-microgateway/tests/operator/deployment_test.yaml
+++ b/deploy/charts/airlock-microgateway/tests/operator/deployment_test.yaml
@@ -69,11 +69,11 @@ tests:
     set:
       networkValidator.image.tag: 4.5.6
       networkValidator.image.digest: ""
-      networkValidator.image.repository: cgr.dev/chainguard/busybox
+      networkValidator.image.repository: cgr.dev/chainguard/netcat
     asserts:
       - equal:
           path: spec.template.spec.containers[0].env[1].value
-          value: cgr.dev/chainguard/busybox:4.5.6
+          value: cgr.dev/chainguard/netcat:4.5.6
     templates:
       - operator/deployment.yaml
 
@@ -81,11 +81,11 @@ tests:
     set:
       networkValidator.image.tag: latest
       networkValidator.image.digest: sha256:d74cbb242cfc9c317552bfa74c166a9816b121181991b69805bc98124108b08b
-      networkValidator.image.repository: cgr.dev/chainguard/busybox
+      networkValidator.image.repository: cgr.dev/chainguard/netcat
     asserts:
       - equal:
           path: spec.template.spec.containers[0].env[1].value
-          value: cgr.dev/chainguard/busybox@sha256:d74cbb242cfc9c317552bfa74c166a9816b121181991b69805bc98124108b08b
+          value: cgr.dev/chainguard/netcat@sha256:d74cbb242cfc9c317552bfa74c166a9816b121181991b69805bc98124108b08b
     templates:
       - operator/deployment.yaml
 
@@ -93,11 +93,11 @@ tests:
     set:
       networkValidator.image.tag: ""
       networkValidator.image.digest: sha256:d74cbb242cfc9c317552bfa74c166a9816b121181991b69805bc98124108b08b
-      networkValidator.image.repository: cgr.dev/chainguard/busybox
+      networkValidator.image.repository: cgr.dev/chainguard/netcat
     asserts:
       - equal:
           path: spec.template.spec.containers[0].env[1].value
-          value: cgr.dev/chainguard/busybox@sha256:d74cbb242cfc9c317552bfa74c166a9816b121181991b69805bc98124108b08b
+          value: cgr.dev/chainguard/netcat@sha256:d74cbb242cfc9c317552bfa74c166a9816b121181991b69805bc98124108b08b
     templates:
       - operator/deployment.yaml
 
