--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -26,10 +26,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.2.4"
+    tag: "4.2.5"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:47ff2f02e676502e421f76eb1c3fadb1609e785877958b1a03aa9949f59df1ab"
+    digest: "sha256:9c34d4fcf6049f3340e03823b10c240249e66da9449a56b5c68c3f01863f4cb1"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -89,10 +89,10 @@ engine:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.2.4"
+    tag: "4.2.5"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:170ef4811f3a33a81825a9c37ed89bb2768dd2c751bf2ee205bcfcb2910663e9"
+    digest: "sha256:88949ab167979efdc5c4297b33a623ed204684ce380604e8aa375062f68613e5"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Engine container.
@@ -117,13 +117,13 @@ engine:
 networkValidator:
   # Specifies the Airlock Microgateway Network Validator image to be injected as an init-container.
   image:
-    # -- Image repository from which to pull the busybox image for the Airlock Microgateway Network Validator init-container.
-    repository: "cgr.dev/chainguard/busybox"
+    # -- Image repository from which to pull the netcat image for the Airlock Microgateway Network Validator init-container.
+    repository: "cgr.dev/chainguard/netcat"
     # -- Image tag to pull.
     tag: ""
-    # -- SHA256 image digest to pull (in the format "sha256:7d87405b123c89058a0b64ca9393c45a1366a6a580aced1def900a812beb29f6").
+    # -- SHA256 image digest to pull (in the format "sha256:6626ab44066867687baa7bfcabedafce5adc50446be1207c90c3b211bd922f84").
     # Overrides tag when specified.
-    digest: "sha256:7d87405b123c89058a0b64ca9393c45a1366a6a580aced1def900a812beb29f6"
+    digest: "sha256:6626ab44066867687baa7bfcabedafce5adc50446be1207c90c3b211bd922f84"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
 license:
